--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Find events, connect with locals and friends, and join the flow of every place you land." />
     <meta name="author" content="the lineup" />
     <meta name="keywords" content="the lineup, local events, join the flow, connect locally, community, friends" />
-
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://raw.githubusercontent.com data:;">
+    
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
